Advanced Lane Detection Execution

--- a/P2_Advanced_Lane_Finding.ipynb
+++ b/P2_Advanced_Lane_Finding.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Import Packages"
+    "## Section 0: Import Packages"
    ]
   },
   {
@@ -30,7 +30,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Camera Calibration"
+    "## Section 1: Camera Calibration"
    ]
   },
   {
@@ -65,7 +65,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Function Defnitions"
+    "## Section 2: Function Defnitions"
    ]
   },
   {
@@ -397,7 +397,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## LANE DETECTION\n"
+    "## Section3: LANE DETECTION\n"
    ]
   },
   {
@@ -611,7 +611,7 @@
     "    right_lane.allx = right_lane.current_fit_coeff[0]*(ploty**2) + right_lane.current_fit_coeff[1]*ploty + right_lane.current_fit_coeff[2]\n",
     "    left_lane.ally = ploty\n",
     "    right_lane.ally = ploty\n",
-    "    \n",
+    "    #=====================================================================================================\n",
     "    ## Visualization ##\n",
     "    # Create an image to draw on and an image to show the selection window\n",
     "    window_img = np.zeros_like(img)\n",
